--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-349.6KB/s(Youtube:不良林), server: 213.183.59.185, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇩🇪 德国-264.2KB/s(Youtube:不良林), server: 5.183.179.141, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇳🇱 荷兰-196.6KB/s(Youtube:不良林), server: 213.183.51.172, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-308.2KB/s(Youtube:不良林), server: 38.68.135.19, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林), server: 213.183.53.202, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.135.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-6.70MB/s(Youtube:不良林), server: jp02-vm0.entry.ikuuu.casa, port: 448, type: vmess, uuid: 811ccaad-9a0c-3363-85fe-6ff4a686f58b, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp02-vm0.entry.ikuuu.casa}}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.68.134.71, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇩🇪 德国-192.2KB/s(Youtube:不良林), server: 5.183.179.141, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇳🇱 荷兰-242.7KB/s(Youtube:不良林), server: 213.183.59.185, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇳🇱 荷兰-189.6KB/s(Youtube:不良林), server: 213.183.59.218, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-988.3KB/s(Youtube:不良林), server: 38.68.135.19, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.135.19, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2, server: 38.68.135.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇯🇵 日本-1.63MB/s(Youtube:不良林), server: jp02-vm0.entry.ikuuu.casa, port: 444, type: vmess, uuid: 4b5ac001-b451-38ac-9b96-64e52d8b9bb4, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp02-vm0.entry.ikuuu.casa}}
-  - {name: 🇺🇸 美国-194.9KB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-165.2KB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-150.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-349.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-264.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-196.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
       - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-349.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-264.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-196.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
       - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-349.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-264.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-196.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
       - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-349.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-264.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-196.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
       - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-349.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-264.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-196.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
       - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-349.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-264.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-196.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
       - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-349.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-264.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-196.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-161.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
       - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
