--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.68.134.71, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-192.2KB/s(Youtube:不良林), server: 5.183.179.141, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇳🇱 荷兰-242.7KB/s(Youtube:不良林), server: 213.183.59.185, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇳🇱 荷兰-189.6KB/s(Youtube:不良林), server: 213.183.59.218, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇺🇸 美国-988.3KB/s(Youtube:不良林), server: 38.68.135.19, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.135.19, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2, server: 38.68.135.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-1.63MB/s(Youtube:不良林), server: jp02-vm0.entry.ikuuu.casa, port: 444, type: vmess, uuid: 4b5ac001-b451-38ac-9b96-64e52d8b9bb4, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp02-vm0.entry.ikuuu.casa}}
-  - {name: 🇺🇸 美国-150.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇬🇧 英国-261.9KB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 38.68.134.71, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: 185.167.116.253, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇳🇱 荷兰-338.5KB/s(Youtube:不良林), server: 213.183.51.171, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林), server: 185.167.117.171, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 198.57.27.225, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-552.5KB/s(Youtube:不良林), server: 213.183.51.171, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇳🇱 荷兰-834.1KB/s(Youtube:不良林), server: 213.183.51.171, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇬🇧 英国-1.48MB/s(Youtube:不良林), server: 152.89.210.105, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-552.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-834.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-552.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-834.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-552.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-834.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-552.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-834.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-552.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-834.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-552.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-834.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-192.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-242.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-379.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-552.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-834.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
